--- a/public/chat.html
+++ b/public/chat.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>ChatWith - Messages</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -111,6 +111,7 @@
 
   <!-- Socket.io Client -->
   <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/mobile.js"></script>
   <script src="/js/chat.js"></script>
 </body>
 
