Add chat delete functionality: individual messages and clear conversation

--- a/public/chat.html
+++ b/public/chat.html
@@ -73,6 +73,9 @@
               </span>
             </div>
           </div>
+          <button id="clearChatBtn" class="icon-btn" title="Clear Chat" style="color: #ff4444;">
+            <span>🗑️</span>
+          </button>
         </div>
 
         <!-- Messages Container -->
